--- a/style.css
+++ b/style.css
@@ -20,20 +20,27 @@ html, body {
     border-bottom: 1px solid #EFEFEF;
 }
 
-.menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 0 auto;
+.header__wrapper {
+    
 }
 
 .header__menu {
     background-color: #E5E5E5;
-    height: 50px; 
+    height: 50px;
+    display: flex;
+    justify-content: space-around; 
 }
 
+.menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+
 .menu__list {
-    max-width: 460px;
+    width: 460px;
     padding-top: 18px;
 }
 
@@ -48,6 +55,10 @@ html, body {
 
 .menu__item:hover {
     color: #66C05D;
+}
+
+.menu__icon {
+    display: none;
 }
 
 .header__info {
@@ -67,6 +78,7 @@ html, body {
     max-width: 260px;
     justify-content: space-between;
 }
+
 .logo__img {
 }
 
@@ -389,15 +401,16 @@ html, body {
     }
     
     
-    .offers__header{
+    .offers__header {
         text-align: center;
+        padding: 0 15px;
     }
     
     .offers__previews {
         flex-direction: column;  
     }
     
-    .offers__content-block:not(:last-child){
+    .offers__content-block:not(:last-child) {
         margin-bottom: 15px;  
     }
     
@@ -412,41 +425,118 @@ html, body {
         margin-right: 0;
     }
     
-    .contacts__adress{
+    .contacts__adress {
         padding-left: 2%;
     }
 }
 
-@media (max-width: 900px){
+@media (max-width: 900px) {
     .main__info {
     }
 
-    .contact-telephone_footer{
+    .contact-telephone_footer {
         flex-direction: column;
         gap: 10px;
     }
+
+    .contacts__adress {
+        order: 3;
+        flex: 0 0 445.88px;
+        flex-wrap: wrap;
+    }
+
+    .main__menu {
+        justify-content: space-around;
+    }
+
 }
     
-@media (max-width: 700px){
+@media (max-width: 700px) {
     .contact-telephone {
         flex-direction: column;
         gap: 10px;
+        position: relative;
     }
 
     .main__menu {
         
     }
     
-    .offers__content-block{
+    .offers__content-block {
         flex-direction: column;
     }
 
-    .offers__item:not(:last-child){
+    .offers__item:not(:last-child) {
         margin-right: 0px;
         margin-bottom: 15px;
     }
+}
 
-@media (max-width: 500px){
+@media (max-width: 500px) {
+    .header__menu {
+        justify-content: flex-end;
+    }
 
+    .header__logo {    
+        position: relative;
+        flex: 0 0 80px;
+        overflow: hidden;
+    }
+    
+    .menu__body {
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 35%;
+        background-color:white;
+        padding: 75px 0px 50px 0px;
+        transition: left 0.5s ease-in-out;
+    }
+
+    .menu__body:target {
+        left: 0;
+    }    
+
+    .menu__list {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 100px;
+        width: 100%;
+    }
+
+    .menu__item_grey {
+        color: #66C05D;
+        font-size: 24px;
+        margin-bottom: 25px;
+        font-weight: 700;
+        text-decoration: underline;
+    }
+
+    .menu__icon {
+        display: flex;
+        position: relative;
+        flex: 0 0 30px;
+        height: 18px;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 15px 15px 0 0;
+    }
+    
+    .menu__icon::before,
+    .menu__icon::after {
+        content: "";
+        background-color: #000000;
+        height: 2px;
+    }
+
+    .menu__icon span {
+        height: 2px;
+        background-color: #000000;
+    }
+
+    
+    .info-block {
     }
 }
