--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html, body {
     color: #66C05D;
 }
 
-.menu__icon {
+.menu-icon {
     display: none;
 }
 
@@ -482,22 +482,30 @@ html, body {
         flex: 0 0 80px;
         overflow: hidden;
     }
-    
+        
     .menu__body {
         position: fixed;
         top: 0;
         left: -100%;
-        width: 100%;
-        height: 35%;
+        width: 100vw;
+        height: 260px;
         background-color:white;
         padding: 75px 0px 50px 0px;
         transition: left 0.5s ease-in-out;
     }
 
-    .menu__body:target {
+    .header:target .menu__body {
         left: 0;
-    }    
+    }
 
+    .header:target .menu-icon_open {
+        display: none;
+    }
+
+    .header:target .menu-icon_close {
+        display: flex;
+    }
+    
     .menu__list {
         flex-direction: column;
         justify-content: center;
@@ -505,7 +513,7 @@ html, body {
         padding-top: 100px;
         width: 100%;
     }
-
+    
     .menu__item_grey {
         color: #66C05D;
         font-size: 24px;
@@ -513,8 +521,8 @@ html, body {
         font-weight: 700;
         text-decoration: underline;
     }
-
-    .menu__icon {
+    
+    .menu-icon {
         display: flex;
         position: relative;
         flex: 0 0 30px;
@@ -524,19 +532,40 @@ html, body {
         padding: 15px 15px 0 0;
     }
     
-    .menu__icon::before,
-    .menu__icon::after {
+    .menu-icon_open::before,
+    .menu-icon_open::after {
         content: "";
         background-color: #000000;
         height: 2px;
     }
 
-    .menu__icon span {
+    .menu-icon_open span {
         height: 2px;
         background-color: #000000;
     }
-
     
+    .menu-icon_close {
+        display: none;
+        height: 30px;
+    }
+
+    .menu-icon_close::before,
+    .menu-icon_close::after {
+        content: "";
+        background-color: #000000;
+        height: 2px;
+        transform-origin: 0 0;
+    }
+    
+    .menu-icon_close::before {
+        transform: rotate(45deg);
+    }
+
+    .menu-icon_close::after {
+        transform: rotate(-45deg);
+
+    }
+
     .info-block {
     }
 }
