--- a/style.css
+++ b/style.css
@@ -458,10 +458,26 @@ html, body {
         position: relative;
     }
 
-    .main__menu {
-        
+    .intro__wrapper {
+        display: flex;
     }
-    
+
+    .main__menu {
+        flex-direction: column;
+        width: 20%;
+        font-size: 12px;
+        min-width: 115px;
+        margin-top: 100px;
+    }
+
+    .menu__item {
+        padding-bottom: 20px;
+    }
+
+    .main__intro {
+        width: 80%;
+    }
+
     .offers__content-block {
         flex-direction: column;
     }
@@ -488,7 +504,6 @@ html, body {
         top: 0;
         left: -100%;
         width: 100vw;
-        height: 260px;
         background-color:white;
         padding: 75px 0px 50px 0px;
         transition: left 0.5s ease-in-out;
